# memory-contamination-diagnostic

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: baseline_fidelity_v2_bge_smoke.yaml  baseline_fidelity_v2_source_contract_replay.yaml  baseline_fidelity_v2_structural_replay.yaml  contamination_sets.yaml  full_matrix.yaml  g0_dc_rs_reflexion_fidelity_followup_replay.yaml  g0_fh_reflexion_dc_faithful_replay.yaml  g0_rag_bot_faithful_replay.yaml  logging_contract_phase11_replay.yaml  logging_contract_replay.yaml  models.yaml  pilot_game24.yaml  pilot_multitask_replay.yaml
docs/: baseline-fidelity-v1.md  baseline-fidelity-v2-evidence.md  baseline-fidelity-v2.md  bge-m3-cache-setup.md  g0-baseline-fidelity-gate-v0.2.md  g0-baseline-fidelity-gate-v0.3.md  g0-baseline-fidelity-gate-v0.4.md  g0-baseline-fidelity-gate-v0.5.md  g0-baseline-fidelity-gate-v0.6.md  g0-dc-rs-reflexion-fidelity-followup.md  logging-audit-remediation-phase11.md  logging-audit-remediation-v0.7.2.md  logging-audit-remediation-v0.7.md  logging-contract-v1.md  logging-contract-v2-phase11.md  logging-v3-phase12.md  phase12-implementation-contract.md  phase12-operator-runbook.md  replay-qa-demo-v0.1.md  replay-qa-demo-v0.2.md
scripts/: build_bfv2_evidence_manifest.py  build_phase12_aggregate_manifest.py  build_phase12_run_manifest.py  generate_phase12_contract_fixtures.py  init_experiment_repo.sh  inspect_baseline_fidelity_v2.py  inspect_g0_dc_rs_reflexion_fidelity.py  inspect_g0_fh_reflexion_dc_fidelity.py  inspect_g0_rag_bot_fidelity.py  qa_task_adapters.py  run_full_matrix.sh  run_pilot.sh  (+6 more)
(+345 files in other folders)
