[project]
name = "memory-contamination-diagnostic"
version = "0.1.0"
description = "Controlled memory-contamination diagnostic harness for LLM reasoning-memory systems"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
memcontam = "memcontam.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
