[project]
name = "memory-contamination-diagnostic"
version = "0.1.0"
description = "Controlled memory-contamination diagnostic harness for LLM reasoning-memory systems"
requires-python = ">=3.11,<3.14"
dependencies = [
  "openai>=1.0,<3",
  "pydantic>=2.0,<3",
  "pyyaml>=6.0,<7",
  "sentence-transformers>=3.0,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "pip-tools==7.6.0",
]

[project.scripts]
memcontam = "memcontam.cli:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
